   signed zero if X is a float with a negative sign.

 - (SXHASH -0.0) != (SXHASH 0.0)

 - (UNREAD-CHAR c) did not decrease the file position accordingly.

 - FILE-STRING-LENGTH only works with file streams, for which it returns
   the right value, and with Gray streams, which output NIL.

 - When ECL is built with --enable-unicode, it uses its own database for
   Unicode properties instead of tolower, toupper, etc (Based on code
   from SBCL)

 - A bug in the binary file loaded prevented loading a recompiled file.

 - READ-DELIMITED-LIST interpreted the value of :RECURSIVEP the wrong way.

 - Fixed problems with C/C++ forward declarations of static arrays in compiled
   code that prevented ECL from building with a C++ compiler.

* AMOP:

 - In DEFCLASS, the :TYPE of slots was ignored.

 - ECL now sets the proper value for the SLOT-DEFINITION-INITFUNCTION and
   SLOT-DEFINITION-INITFORM of each effective and direct slot definition.

 - The canonicalized default arguments list now contains functions instead
   of the forms to be evaluated.

 - With null safety settings, the slot accessors for structures with
   specialized vector types were not properly compiled.

 - DEFSTRUCT :INCLUDE did not work with read only slots.

* Visible changes:

 - New function (EXT:HEAP-SIZE &optional NEW-MAX-HEAP-SIZE) can change the      
   memory limits.

 - LOG does not overflow on bignums (LOG (ASH 1 128) 2) => 128

 - Instead of internally using the format (ARRAY T), Unicode strings are
   now stored using an (ARRAY (SIGNED-BYTE 32)). This saves memory on
   systems with 64-bit pointers.

 - Two new constants, a C macro ECL_VERSION_NUMBER, and Lisp constant
   EXT:+ECL-VERSION-NUMBER+, allow determining the version of ECL with
   a greater granurality. The constant is a decimal number, yymmaa,
   matching the ECL versioning scheme.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***