@@ -61,6 +61,9 @@ ECL 9.1.0:
  - Fixed problems with C/C++ forward declarations of static arrays in compiled
    code that prevented ECL from building with a C++ compiler.
 
+ - The CLX module now adds itself to *MODULES* and also requires SOCKETS
+   automatically on startup.
+
 * AMOP:
 
  - In DEFCLASS, the :TYPE of slots was ignored.
